slurp in latest compute commits